[gd_scene load_steps=8 format=3 uid="uid://dvf1rqy0jirrg"]

[ext_resource type="Script" path="res://scenes/ui/inventory/inventory_slot.gd" id="1_1nyx0"]
[ext_resource type="Texture2D" uid="uid://d37ow65qu06eu" path="res://assets/ui/itemSlotSelected.png" id="1_bellk"]
[ext_resource type="Texture2D" uid="uid://dwggash1qfa4b" path="res://assets/ui/itemSlot.png" id="1_fc2bw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nl13p"]

[sub_resource type="Animation" id="Animation_7rpij"]
resource_name = "deselected"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bgTexture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("1_bellk"), ExtResource("1_fc2bw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.593412, 0.0]
}

[sub_resource type="Animation" id="Animation_3brdu"]
resource_name = "selected"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bgTexture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("1_fc2bw"), ExtResource("1_bellk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.593412, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67crs"]
_data = {
"deselected": SubResource("Animation_7rpij"),
"selected": SubResource("Animation_3brdu")
}

[node name="InventorySlot" type="PanelContainer"]
offset_right = 48.0
offset_bottom = 48.0
pivot_offset = Vector2(23, 23)
theme_override_styles/panel = SubResource("StyleBoxEmpty_nl13p")
script = ExtResource("1_1nyx0")

[node name="bgTexture" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
texture = ExtResource("1_fc2bw")

[node name="itemTexture" type="TextureRect" parent="."]
layout_mode = 2
expand_mode = 3
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_67crs")
}

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 2
vertical_alignment = 2

[node name="durabilityBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
max_value = 1.0
value = 0.5
show_percentage = false
